<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#007a37">

    <View
        android:id="@+id/fundo_cadastroCid"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/fundo_branco"
        android:elevation="2dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="116dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="115dp"
        android:contentDescription="Imglogo"
        android:elevation="2dp"
        app:srcCompat="@drawable/logo_sfe3" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:elevation="2dp"
        android:gravity="center"
        android:text="@string/titulo"
        android:textColor="#ffc107"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/subTitulo6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="122dp"
        android:elevation="2dp"
        android:text="@string/subTitulo6"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TableLayout
        android:id="@+id/tabela_dados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subTitulo6"
        android:layout_marginTop="16dp"
        android:elevation="2dp"
        android:padding="16dp">

        <TableRow>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:text="@string/idCidadaoLista"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/idCidadaoLista"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="2dp"
                android:hint="idCidadao"
                android:inputType="text" />
        </TableRow>

        <!-- Linha 1 -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nome:"
                android:textColor="#000000"
                android:elevation="2dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/nomeLista"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="2dp"
                android:hint="Insira o nome"
                android:inputType="text" />
        </TableRow>

        <!-- Linha 2 -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CPF:"
                android:elevation="2dp"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/cpfLista"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Insira o CPF"
                android:elevation="2dp"
                android:inputType="text" />
        </TableRow>

        <!-- Linha 3 -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sexo:"
                android:elevation="2dp"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/sexoLista"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="2dp"
                android:hint="Insira o sexo"
                android:inputType="text" />
        </TableRow>

        <!-- Linha 4 -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login:"
                android:textColor="#000000"
                android:elevation="2dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/loginLista"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Insira o login"
                android:elevation="2dp"
                android:inputType="text" />
        </TableRow>

        <!-- Linha 5 -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Senha:"
                android:textColor="#000000"
                android:elevation="2dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/senhaLista"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Insira a senha"
                android:elevation="2dp"
                android:inputType="textPassword" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/layout_btlogar"
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="613dp"
        android:layout_marginEnd="14dp"
        android:elevation="2dp"
        android:gravity="center">

        <Button
            android:id="@+id/btVoltar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="0dp"
            android:elevation="2dp"
            android:insetLeft="10dp"
            android:text="@string/btVoltar"
            android:textColor="#FFFFFF"
            app:backgroundTint="#007a37"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</RelativeLayout>
